--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 <body>
     <div>
-        <form action="" method="post" id="Form">
-            <input type="text" name="id" placeholder="Id"><br>
-            <input type="text" name="name" placeholder="Namn"><br>
-            <input type="text" name="pris" placeholder="Pris"><br>
-            <input type="text" name="storlek" placeholder="Storlek"><br>
-            <input type="text" name="år" placeholder="År"><br><br>
-            <button type="submit">Submit</button>
+        <form action="/product.json" method="post" id="tvform">
+            <h1>Hasan TV AB</h1>
+            <input type="text" id="id" name="id" placeholder="Id"><br>
+            <input type="text" id="name" name="name" placeholder="Namn"><br>
+            <input type="text" id="price" name="price" placeholder="Price"><br>
+            <input type="text" id="size" name="size" placeholder="Size"><br>
+            <input type="text" id="year" name="year" placeholder="Year"><br><br>
+            <button type="submit">Submit/POST</button>
         </form>
     </div>
 
