--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div>
-        <form action="/product.json" method="post" id="tvform">
+        <form>
             <h1>Hasan TV AB</h1>
-            <input type="text" id="id" name="id" placeholder="Id"><br>
+            <!-- <input type="text" id="id" name="id" placeholder="Id"><br> -->
             <input type="text" id="name" name="name" placeholder="Namn"><br>
             <input type="text" id="price" name="price" placeholder="Price"><br>
             <input type="text" id="size" name="size" placeholder="Size"><br>
