get done, get id done, post done

--- a/index.html
+++ b/index.html
@@ -8,31 +8,25 @@
     <title>Rest API VG</title>
     <!-- <script src="script.js" defer></script> -->
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-
-    <h1>Hasan TV AB</h1>
+    <h1>Hasan TV AB <br></h1>
+    <h2>Our Products</h2>
     <!-- -------------------------------get products----------------- -->
-    <h1>Our Products</h1>
+
     <div id="products-from-api">
     </div>
 
 
     <!-- -------------------------------get id----------------- -->
     <div class="divid">
-        <h1>Chose one id</h1>
+        <h2>Chose one id</h2>
         <form id="formid">
             <input type="number" id="input" placeholder="One id"> <br>
             <button type="submit">One id</button>
         </form>
-
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
     </div>
 
     <!-- -------------------------------post products----------------- -->
@@ -80,7 +74,7 @@
 
 
 
-    <script src="script.js"></script>
+
 </body>
 
 </html>
