--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
             <button type="submit">POST</button>
         </form>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- -------------------------------put products----------------- -->
     <div id="update-form">
         <h2>Put/uppdate a product</h2>
@@ -57,23 +71,30 @@
         <button type="submit">UPDATE</button>
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- -------------------------------delete products----------------- -->
     <div class="div3">
-        <form>
-            <h2>Delete a product</h2>
+        <form id="formdelete" method="DELETE"></form>
+        <h2>Delete a product</h2>
+        <h3>Type in the id you want to delete</h3>
 
-            <input type="number" id="id" name="id" placeholder="Id"><br><br>
-            <!-- <input type="text" id="name" name="name" placeholder="Namn"><br>
-            <input type="number" id="price" name="price" placeholder="Price"><br>
-            <input type="number" id="size" name="size" placeholder="Size"><br>
-            <input type="number" id="year" name="year" placeholder="Year"><br><br> -->
-
-            <button type="submit">DELETE</button>
+        <input type="number" id="input" placeholder="Delete Id"><br><br>
+        <button type="submit">DELETE</button>
         </form>
     </div>
-
-
-
 
 </body>
 
