get array, get id, post, put done

--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
 
     <!-- -------------------------------delete products----------------- -->
     <div class="div3">
-        <form id="formdelete" method="DELETE"></form>
-        <h2>Delete a product</h2>
-        <h3>Type in the id you want to delete</h3>
+        <form id="formdelete" method="DELETE"> <!--la till mwtod-->
+            <h2>Delete a product</h2>
 
-        <input type="number" id="input" placeholder="Delete Id"><br><br>
-        <button type="submit">DELETE</button>
+            <h3>Type in the id you want to delete</h3>
+
+
+            <input type="number" id="input" placeholder="Delete Id"><br><br>
+            <button type="submit">DELETE</button>
         </form>
     </div>
 
