--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest API VG</title>
-    <!-- <script src="script.js" defer></script> -->
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -16,13 +15,12 @@
     <h2>Our Products</h2>
     <!-- -------------------------------get products----------------- -->
 
-    <div id="products-from-api">
-    </div>
+    <div id="products-from-api"></div>
 
 
     <!-- -------------------------------get id----------------- -->
     <div class="divid">
-        <h2>Chose one id</h2>
+        <h2>Chose one id to show info </h2>
         <form id="formid">
             <input type="number" id="input" placeholder="One id"> <br>
             <button type="submit">One id</button>
@@ -35,6 +33,7 @@
     <div class="div1">
         <form id="formpost">
             <h2>Post a new product</h2>
+            <h3>Refresh and check the list at the top</h3>
 
             <input type="text" id="name" name="name" placeholder="Namn"><br>
             <input type="number" id="price" name="price" placeholder="Price"><br>
@@ -62,6 +61,7 @@
     <div id="update-form">
         <form id="formput">
             <h2>Put/uppdate a product</h2>
+            <h3>Refresh and check the list at the top</h3>
             <input type="number" id="id" placeholder="Witch id to change"><br>
             <input type="text" id="newname" placeholder="New name"><br>
             <input type="number" id="newprice" placeholder="New price"><br>
@@ -86,7 +86,7 @@
 
     <!-- -------------------------------delete products----------------- -->
     <div class="div3">
-        <form id="formdelete" method="DELETE"> <!--la till mwtod-->
+        <form id="formdelete"> <!--la till method="DELETE"-->
             <h2>Delete a product</h2>
 
             <h3>Type in the id you want to delete</h3>
