--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
     <div id="products-from-api"></div>
 
-
     <!-- -------------------------------get id----------------- -->
+
     <div class="divid">
         <h2>Chose one id to show info </h2>
         <form id="formid">
             <input type="number" id="input" placeholder="One id"> <br>
+
             <button type="submit">One id</button>
         </form>
     </div>
 
     <!-- -------------------------------post products----------------- -->
-
 
     <div class="div1">
         <form id="formpost">
@@ -44,24 +44,13 @@
         </form>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- -------------------------------put products----------------- -->
+
     <div id="update-form">
         <form id="formput">
             <h2>Put/uppdate a product</h2>
             <h3>Refresh and check the list at the top</h3>
+
             <input type="number" id="id" placeholder="Witch id to change"><br>
             <input type="text" id="newname" placeholder="New name"><br>
             <input type="number" id="newprice" placeholder="New price"><br>
@@ -72,27 +61,15 @@
         </form>
     </div>
 
+    <!---------------------------------delete products------------------->
 
-
-
-
-
-
-
-
-
-
-
-
-    <!-- -------------------------------delete products----------------- -->
     <div class="div3">
-        <form id="formdelete"> <!--la till method="DELETE"-->
+        <form id="formdelete">
             <h2>Delete a product</h2>
-
             <h3>Type in the id you want to delete</h3>
 
-
             <input type="number" id="input" placeholder="Delete Id"><br><br>
+
             <button type="submit">DELETE</button>
         </form>
     </div>
